I have added a test script
